# Lima-camera-xspress3

./: .gitignore  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
python/: __init__.py
sdk/include/: datamod.h  os9types.h
sdk/libs/linux.x86_64/: libimg_mod.so.1.0.0  libxspress3.so.1.0.0
sip/: Xspress3Camera.sip
src/: Xspress3Camera.cpp
tango/: CMakeLists.txt
test/: CMakeLists.txt
